edited config file

--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ lang: en
 
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: America/Los_Angeles
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Glo World                          # the main title
+title: Glo's World                          # the main title
 
 tagline: A text-focused Jekyll theme   # it will display as the sub-title
 
